--- a/index.html
+++ b/index.html
@@ -21,26 +21,23 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(135deg, #eef2ff, #f8fafc);
+      background: #f8fafc;
+      color: #0f172a;
     }
     .container {
       width: 100%;
-      max-width: 380px;
-      background: #ffffff;
-      padding: 28px 22px 30px;
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+      max-width: 420px;
+      padding: 20px;
       text-align: center;
     }
     h1 {
       margin: 0;
-      font-size: 24px;
+      font-size: 26px;
       font-weight: 700;
-      color: #0f172a;
-      letter-spacing: 0.2px;
+      letter-spacing: 0.3px;
     }
     h2 {
-      margin: 6px 0 24px;
+      margin: 8px 0 36px;
       font-size: 15px;
       font-weight: 500;
       color: #475569;
@@ -55,42 +52,47 @@
     }
     input {
       width: 100%;
-      padding: 14px 4px;
-      font-size: 16px;
+      padding: 14px 6px;
+      font-size: 18px;
       border: none;
-      border-bottom: 2px solid #e2e8f0;
+      border-bottom: 2px solid #cbd5f5;
       outline: none;
       background: transparent;
       transition: border-color 0.2s ease;
+      text-align: center;
+      letter-spacing: 1px;
     }
     input::placeholder {
       color: #94a3b8;
+      letter-spacing: normal;
     }
     input:focus {
       border-bottom-color: #2563eb;
     }
+    .error {
+      margin-top: 10px;
+      font-size: 13px;
+      color: #dc2626;
+      display: none;
+    }
     button {
-      margin-top: 26px;
+      margin-top: 36px;
       width: 100%;
-      padding: 14px;
+      padding: 15px;
       font-size: 16px;
       font-weight: 600;
-      color: #fff;
-      background: linear-gradient(135deg, #2563eb, #1d4ed8);
+      color: #ffffff;
+      background: #2563eb;
       border: none;
-      border-radius: 14px;
+      border-radius: 10px;
       cursor: pointer;
-      box-shadow: 0 10px 20px rgba(37, 99, 235, 0.35);
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
-    }
-    button:hover {
-      box-shadow: 0 14px 26px rgba(37, 99, 235, 0.45);
+      transition: background 0.2s ease, transform 0.15s ease;
     }
     button:active {
-      transform: scale(0.97);
+      transform: scale(0.98);
     }
     .note {
-      margin-top: 16px;
+      margin-top: 18px;
       font-size: 12px;
       color: #64748b;
     }
@@ -101,26 +103,40 @@
     <h1>JnUCSU</h1>
     <h2>Voter ID Card</h2>
 
-    <form id="voterForm">
+    <form id="voterForm" novalidate>
       <label for="jnuId">JnU ID</label>
       <input
         type="text"
         id="jnuId"
-        placeholder="Enter your JnU ID"
+        inputmode="numeric"
+        placeholder="Enter 10-digit Student ID"
+        maxlength="10"
         required
       />
+      <div class="error" id="errorMsg">Please enter a valid 10-digit student ID.</div>
       <button type="submit">Download</button>
     </form>
 
-    <div class="note">Ensure your JnU ID is correct before proceeding.</div>
+    <div class="note">Only valid 10-digit JnU student IDs are accepted.</div>
   </div>
 
   <script>
     document.getElementById('voterForm').addEventListener('submit', function (e) {
       e.preventDefault();
-      const id = document.getElementById('jnuId').value.trim();
-      if (!id) return;
-      const url = 'https://jrp.jnu.ac.bd/voterlists/vsview/' + encodeURIComponent(id) + '/';
+      const input = document.getElementById('jnuId');
+      const error = document.getElementById('errorMsg');
+      const id = input.value.trim();
+
+      const isValid = /^\d{10}$/.test(id);
+
+      if (!isValid) {
+        error.style.display = 'block';
+        input.focus();
+        return;
+      }
+
+      error.style.display = 'none';
+      const url = 'https://jrp.jnu.ac.bd/voterlists/vsview/' + id + '/';
       window.open(url, '_blank');
     });
   </script>
