--- a/index.html
+++ b/index.html
@@ -112,19 +112,26 @@
         maxlength="10"
         required
       />
-      <div class="error" id="errorMsg">Please enter a valid 10-character student ID (letters and numbers).ad</button>
+      <div class="error" id="errorMsg">Please enter a valid 10-character student ID (letters and numbers).</div>
+      <button type="submit">Download</button>
     </form>
 
-    <div class="note">Only valid 10-digit JnU student IDs are aOnly valid 10-character JnU student IDs (letters and numbers) are accepted.mit', function (e) {
+    <div class="note">Only valid 10-character JnU student IDs (letters and numbers) are accepted.</div>
+  </div>
+
+  <script>
+    document.getElementById('voterForm').addEventListener('submit', function (e) {
       e.preventDefault();
       const input = document.getElementById('jnuId');
       const error = document.getElementById('errorMsg');
       const id = input.value.trim();
 
-      const isValid = /^\d{10}$/.test(id);
+      const isValid = /^[A-Za-z0-9]{10}$/.test(id);
 
       if (!isValid) {
-        error.style.display = const isValid = /^[A-Za-z0-9]{10}$/.test(id);    return;
+        error.style.display = 'block';
+        input.focus();
+        return;
       }
 
       error.style.display = 'none';
