--- a/index.html
+++ b/index.html
@@ -108,11 +108,12 @@
     </form>
 
     <div class="footer">
-      স্লোগান –<br><br>
-      জাবির খান <span class="star">★</span> ব্যালট – ৩৩<br>
+      সৌজন্য:<br>
+      <strong><a href="https://www.facebook.com/jabir.khan.97862">জাবির খান</a></strong>strong><br>
+      ব্যালট নং – ৩৩<br>
       কার্যনির্বাহী সদস্য পদপ্রার্থী
 
-      <div class="code">Code – Ahoshanur Rahman</div>
+      <div class="code">কোড – <a href="https://www.facebook.com/ahoshanur">এহসানুর রহমান</a></div>
     </div>
   </div>
 
@@ -138,3 +139,4 @@
   </script>
 </body>
 </html>
+
