--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>জকসু ভোটার কার্ড ডাউনলোড</title>
+  <title>জকসু নির্বাচন – ভোটার কার্ড ডাউনলোড</title>
 
   <!-- Bengali + professional font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;500;600;700" rel="stylesheet">
 
   <style>
     * {
       box-sizing: border-box;
-      font-family: 'Hind Siliguri', system-ui, sans-serif;
+      font-family: 'Noto Sans Bengali', system-ui, sans-serif;
     }
     body {
       margin: 0;
@@ -22,6 +22,7 @@
       color: #1f2937;
       display: flex;
       justify-content: center;
+      align-items: center;
     }
     .page {
       width: 100%;
@@ -108,12 +109,11 @@
     </form>
 
     <div class="footer">
-      সৌজন্য:<br>
-      <strong><a href="https://www.facebook.com/jabir.khan.97862">জাবির খান</a><br>
-      ব্যালট নং – ৩৩<br>
-      কার্যনির্বাহী সদস্য পদপ্রার্থী</strong>
+      স্লোগান –<br><br>
+      জাবির খান <span class="star">★</span> ব্যালট – ৩৩<br>
+      কার্যনির্বাহী সদস্য পদপ্রার্থী
 
-      <div class="code">কোড – <a href="https://www.facebook.com/ahoshanur">এহসানুর রহমান</a></div>
+      <div class="code">Code – Ahoshanur Rahman</div>
     </div>
   </div>
 
@@ -139,5 +139,3 @@
   </script>
 </body>
 </html>
-
-
