--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     }
     input {
       width: 100%;
-      padding: 14px;
-      font-size: 18px;
-      border: 2px solid #3b2a20;
+      padding: 10px 12px;
+      font-size: 16px;
+      border: 1.5px solid #3b2a20;
       border-radius: 2px;
       outline: none;
       text-align: center;
@@ -63,10 +63,10 @@
       display: none;
     }
     button {
-      margin-top: 20px;
+      margin-top: 16px;
       width: 100%;
-      padding: 14px;
-      font-size: 18px;
+      padding: 10px;
+      font-size: 16px;
       font-weight: 600;
       color: #ffffff;
       background: #2b1a12;
