--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>জকসু নির্বাচন – ভোটার কার্ড ডাউনলোড</title>
+  <title>জকসু ভোটার কার্ড ডাউনলোড</title>
 
   <!-- Bengali + professional font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -94,7 +94,7 @@
     <h1>জকসু নির্বাচন</h1>
     <h2>ভোটার কার্ড ডাউনলোড</h2>
 
-    <div class="instruction">নির্ভুলভাবে আপনার Student ID নিচে লিখুন</div>
+    <div class="instruction">নির্ভুলভাবে আপনার Student ID নিচে লিখুন*</div>
 
     <form id="voterForm" novalidate>
       <input
@@ -104,16 +104,17 @@
         maxlength="10"
         required
       />
-      <div class="error" id="errorMsg">সঠিক ১০ অক্ষরের Student ID দিন (অক্ষর ও সংখ্যা)।</div>
+      <div class="error" id="errorMsg">সঠিক ১০ অক্ষরের Student ID দিন।</div>
       <button type="submit">ডাউনলোড করুন</button>
     </form>
 
     <div class="footer">
-      স্লোগান –<br><br>
-      জাবির খান <span class="star">★</span> ব্যালট – ৩৩<br>
-      কার্যনির্বাহী সদস্য পদপ্রার্থী
+      সৌজন্য:<br>
+      <strong><a href="https://www.facebook.com/jabir.khan.97862">জাবির খান</a><br>
+      ব্যালট নং – ৩৩<br>
+      কার্যনির্বাহী সদস্য পদপ্রার্থী</strong>strong>
 
-      <div class="code">Code – Ahoshanur Rahman</div>
+      <div class="code">কোড – <a href="https://www.facebook.com/ahoshanur">এহসানুর রহমান</a></div>
     </div>
   </div>
 
@@ -139,3 +140,4 @@
   </script>
 </body>
 </html>
+
