--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <input
         type="text"
         id="jnuId"
-        placeholder="JnU Student ID"
+        placeholder="B230502XXX"
         maxlength="10"
         required
       />
@@ -140,4 +140,5 @@
   </script>
 </body>
 </html>
+
 
