--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       সৌজন্য:<br>
       <strong><a href="https://www.facebook.com/jabir.khan.97862">জাবির খান</a><br>
       ব্যালট নং – ৩৩<br>
-      কার্যনির্বাহী সদস্য পদপ্রার্থী</strong>strong>
+      কার্যনির্বাহী সদস্য পদপ্রার্থী</strong>
 
       <div class="code">কোড – <a href="https://www.facebook.com/ahoshanur">এহসানুর রহমান</a></div>
     </div>
@@ -140,5 +140,6 @@
   </script>
 </body>
 </html>
+
 
 
