--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Open Graph / Facebook / Social Media Meta Tags -->
+<meta property="og:title" content="জকসু ভোটার কার্ড ডাউনলোড" />
+<meta property="og:description" content="আপনার Student ID দিয়ে সহজেই জকসু ভোটার কার্ড ডাউনলোড করুন।" />
+<meta property="og:image" content="https://jnucsucard.vercel.app/jnucsucard.jpg" />
+<meta property="og:url" content="https://jnucsucard.vercel.app/" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="জকসু ভোটার কার্ড ডাউনলোড" />
+<meta name="twitter:description" content="আপনার Student ID দিয়ে সহজেই জকসু ভোটার কার্ড ডাউনলোড করুন।" />
+<meta name="twitter:image" content="https://jnucsucard.vercel.app/jnucsucard.jpg" />
+
   <title>জকসু ভোটার কার্ড ডাউনলোড</title>
 
   <!-- Bengali + professional font -->
@@ -176,3 +189,4 @@
   </script>
 </body>
 </html>
+
